stopping point , added final info, working on alignment of text/background

--- a/Css/style.scss
+++ b/Css/style.scss
@@ -8,9 +8,9 @@ body {
 }
 .topSection {
     // flex-direction: row;
-    margin-bottom: 10px;
     background-color: $topSectionColor;
     display: $mydisplay;
+    padding-bottom: 10px;
 }
 .icon {
     display: $mydisplay;
@@ -28,6 +28,8 @@ body {
 }
 .leftHalf {
     margin-left: 5%;
+    margin-right: 10px;
+    color: #4b515f;
     p{
         margin-right: $rightMargins;
         // this is the extend property. Applies this to any paragraph in this div.
@@ -38,6 +40,11 @@ body {
     h1 {
         margin-right: $rightMargins;
     }
+}
+.divider {
+    border-top: 8px solid #babec7;
+    border-radius: 5px;
+    margin-right: 88%;
 }
 .icon {
     display: $mydisplay;
@@ -60,13 +67,17 @@ body {
     flex-direction: column;
     // margin-right: $leftMargins;
 }
-.rightHalf {
+.rightBox {
     display: $mydisplay;
     flex-direction: column;
     background-color: $rightBackground;
     margin-left: -45%;
-    padding-right: 45%;
+    padding-right: 37%;
 
+}
+.rightHalf {
+    padding-left: 20px;
+    color: #4b515f;
 }
 .iconContent {
     display: $mydisplay;
@@ -81,6 +92,27 @@ body {
 .align {
     padding-top: 14px;
     padding-right: 5px;
+}
+.education {
+    p{
+        margin-bottom: -7px;
+    }
+}
+.monkeys{
+    h3 {
+        margin-bottom: -10px;
+    }
+    h5 {
+        margin-bottom: -5px;
+    }
+}
+.worldMark{
+    h3 {
+        margin-bottom: -10px;
+    }
+    h5 {
+        margin-bottom: -5px;
+    }
 }
 
 // import properties from a separate css file like body or topsection as examples
